# dp-KRE

./: Cargo.toml  README.md  requirements.txt
bench_results/Protocol DP/high noise/report/: index.html
bench_results/Protocol DP/k=max/high noise/base/: sample.json  (+2 more)
bench_results/Protocol DP/k=max/report/: index.html
bench_results/Protocol DP/k=median/report/: index.html
bench_results/Protocol DP/k=min/report/: index.html
bench_results/Protocol DP/low noise/report/: index.html
bench_results/Protocol DP/medium noise/report/: index.html
bench_results/Protocol DP/none noise/report/: index.html
bench_results/Protocol DP/report/: index.html
bench_results/Protocol Leakage/db_size=10000/report/: index.html
bench_results/Protocol Leakage/db_size=100000/report/: index.html
bench_results/Protocol Leakage/db_size=300000/report/: index.html
bench_results/Protocol Leakage/db_size=50000/report/: index.html
bench_results/Protocol Leakage/db_size=500000/report/: index.html
bench_results/Protocol Leakage/k=max/report/: index.html
bench_results/Protocol Leakage/k=median/report/: index.html
bench_results/Protocol Leakage/k=min/report/: index.html
bench_results/Protocol Leakage/report/: index.html
benches/: evaluation.rs
prototyping/: dp_prototype.py
src/: dp_test.rs  lib.rs  protocol.rs  test.rs
src/net/: benchmarks.rs  mod.rs  netclient.rs  netserver.rs  pf.conf
src/party/: dp_client.rs  mod.rs  party_client.rs  party_server.rs
src/utils/: deviation_histogram.py  mod.rs  noise_histogram.py  plot.rs  plot_utils.py  protocol.rs  results_scatter.py
(+132 files in other folders)
