[package]
name = "privdev-dp-comp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pht-crypto = {git = "https://github.com/robinhundt/pht-crypto", rev = "79502ebb8060345d90b33fd6b7532d954a580853"}
#pht-crypto = {path = "../../pht-crypto"}
rug = { version = "1.13.0", features = ["serde"] }
num = "0.4.0"
tarpc = { version = "0.27.2", features = ["full"]}
serde = "1.0.130"
serde_json = "1.0.68"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.17"
anyhow = "1.0.44"
rand = "0.8.4"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.17"
bincode = "1.3.3"
rayon = "1.5.2"
rand_distr = "0.4.3"
opendp = "0.6.2"
plotters = "0.3.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "evaluation"
harness = false
